--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "solid",
-  "private": true,
-  "version": "0.0.0",
+  "name": "clean-code-and-solid-best-practices",
+  "packageManager": "yarn@3.2.4",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
-  "devDependencies": {
-    "typescript": "^4.5.4",
-    "vite": "^1.9.0"
+  "dependencies": {
+    "typescript": "^5.0.3",
+    "vite": "^4.2.1"
   }
 }
